--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "yoga_mysql",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mysql": "^2.18.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/askoke/yoga-mysql.git"
+  },
+  "bugs": {
+    "url": "https://github.com/askoke/yoga-mysql/issues"
+  },
+  "homepage": "https://github.com/askoke/yoga-mysql#readme",
+  "description": ""
 }
